examples/fail/parser/missing_semicolon.bina
// EXPECT_PARSER_ERROR: expected ';' after let statement
fn main() -> int {
    let x = 1
    return x;
}
